--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -25,40 +25,40 @@
     </div>
    </div>
     <!-- Three columns of text below the carousel -->
-    <div class="row pt-3">
-      <div class="card text-center col-md-4">
+    <div class="row pt-2">
+      <div class="card text-center col-md-3 mx-auto">
         <div class="card-header">
           Step1
         </div>
         <div class="card-body">
-          <h5 class="card-title">登録をしよう!</h5>
-          <p class="card-text">First, register as a member! If you are already registered, please login.</p>
+          <h4 class="card-title text-white"><strong>登録をしよう!</strong></h4>
+          <p class="card-text text-white">First, register as a member! If you are already registered, please login.</p>
           <%= link_to "登録する/ログインする", new_public_post_item_path, class: "btn btn-primary" %>
         </div>
         <div class="card-footer text-muted">
           ～新規登録・ログイン～
         </div>
       </div>
-      <div class="card text-center col-md-4">
+      <div class="card text-center col-md-3 mx-auto">
         <div class="card-header">
           Step2
         </div>
         <div class="card-body">
-          <h5 class="card-title">プロフィールを完成させよう!</h5>
-          <p class="card-text">Complete your profile first! Thank you for your cooperation.</p><br/>
-          <%= link_to "マイページへ", public_user_path(current_user.id), class: "btn btn-primary" %>
+          <h4 class="card-title text-white"><strong>プロフィールを完成させよう!</strong></h4>
+          <p class="card-text text-white">Complete your profile first! Thank you for your cooperation.</p><br/>
+          <%= link_to "マイページへ", public_user_path(@user.id), class: "btn btn-primary" %>
         </div>
         <div class="card-footer text-muted">
           ～マイページ～
         </div>
       </div>
-      <div class="card text-center col-md-4">
+      <div class="card text-center col-md-3 mx-auto">
         <div class="card-header">
           Step3
         </div>
         <div class="card-body">
-          <h5 class="card-title">作品を投稿しよう!</h5>
-          <p class="card-text">Let's start submitting our work! Let's get started!</p><br/>
+          <h4 class="card-title text-white"><strong>作品を投稿しよう!</strong></h4>
+          <p class="card-text text-white">Let's start submitting our work! Let's get started!</p><br/>
           <%= link_to "新規投稿する", new_public_post_item_path, class: "btn btn-primary" %>
         </div>
         <div class="card-footer text-muted">
