--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -67,8 +67,10 @@ body {
   margin-bottom: 20px;
    img{
      width: 100%;
-     height: 500px;
+     height: 600px;
+     object-fit: cover;
    }
+
 }
 
 .content{
