--- a/app/views/public/post_items/index.html.erb
+++ b/app/views/public/post_items/index.html.erb
@@ -1,40 +1,68 @@
-<p id="notice"><%= notice %></p>
-<div class="container px-5 px-sm-0">
-   <div class="row justify-content-md-center">
-     <h3 class="title text-center">みんなの投稿一覧画面</h3>
-  <%= form_tag public_post_items_path, method: :get do %>
+<html>
+<main>
+<div class="card">
+  <%= image_tag "background.png", class: "card-img" %>
+  <div class="card-img-overlay">
+    <h1 class="card-text text-center titlename pt-4"><strong>みんなの投稿一覧画面</strong></h1>
+    <p class="card-text text-center text">～気になる投稿は欠かさずチェックしよう～</p>
+  </div>
+</div>
+</main>
 
-  <% @genres.each do |genre| %>
+<div>
+<section class="py-5 text-center container pt-6">
+  <h3 class="genre_title text-center"><strong>ジャンル検索一覧</strong></h3>
+  <div class="row col-md-10 justify-content-center box1 mx-auto ">
+    <%= form_tag public_post_items_path, method: :get do %>
+    <% @genres.each do |genre| %>
       <div>
-        <%= link_to genre.name, public_genre_path(genre.id) %>
+        <%= link_to genre.name, public_genre_path(genre.id), class: "btn btn-outline-primary col-md my-2 justify-content-center" %>
       </div>
-  <% end %>
-      <div class="tag-box">
-        <%= link_to "全ての投稿一覧", public_post_items_path %>
-      </div>
-   </div>
+    <% end %>
+  </div>
+</section><br/>
+</div>
+<div class="container">
    <div class="row">
      <% @post_items.each do |post_item| %>
-    <div class="row card offset-1">
-     <div class="card-body">
-       <h5 class="card-title"><%=post_item.name %></h5>
-       <%= link_to  public_post_item_path(post_item) do %>
-       <p class="card-image"><%= image_tag post_item.images[0] ,width:200, height:200 %></p>
-       <% end %>
-       <ここにいいね&ファボをつける>
-        <div><br />
+     <div class="col-md-4 mx-auto my-2">
+       <div class="card1">
+         <div class="card-body text-white">
+           <%= link_to  public_post_item_path(post_item) do %>
+           <p><%= image_tag post_item.images[0] , class: "card-image" %></p>
+        <% end %>
+        <div class="avatar_image">
         <%= link_to  public_user_path(post_item.user) do %>
           <% if post_item.user.avatar.attached? %>
           <%= image_tag post_item.user.avatar.variant(resize:'100x100').processed %>
           <% else %>
           <%= image_tag ("no_image.png"), size: '100x100'  %>
           <% end %>
+          <br/>
+          <br/>
+          <div class="row">
+            <div class="itemname mt-2">
+             <h6><strong><%=post_item.name %></strong></h6>
+            </div>
+          </div>
         <% end %>
        </div>
+      <div class="row pl-2">
+       <h4><i class="far fa-comment comment pl-3"></i></h4>
+       <div class="pl-1">
+           <strong><%= "#{post_item.comments.count}" %></strong>
+       </div>
+       <h4><i class="fas fa-star favorite pl-3"></i></h4>
+       <div class="pl-1">
+           <strong><%= "#{post_item.favorites.count}" %></strong>
+       </div>
       </div>
-       <%= "#{post_item.comments.count} コメント" %>
+      </div>
      </div>
+    </div>
      <% end %>
    </div>
 <% end %>
+<h5><strong><%= paginate @post_items, class: "mx-auto" %></strong></h5>
 </div>
+</html>
