--- a/app/views/public/post_items/ranking.html.erb
+++ b/app/views/public/post_items/ranking.html.erb
@@ -1,8 +1,17 @@
-<div class="container px-5 px-sm-0">
-  <h3><strong>人気投稿作品ランキング!!</strong></h3>
-        <% @favorite_ranks.each.with_index(1) do |post_item, i| %>
-          第<%= i %>位
-         <%= render partial: 'post_item', locals:{ post_item: post_item} %>
-        <% end %>
- </div>
-
+   <h3 class="text-center"><strong>人気投稿作品ランキング!!</strong></h3><br/>
+  <div class="d-flex justify-content-center">
+  <% @favorite_ranks.each.with_index(1) do |post_item, i| %>
+  <i class="fas fa-crown crown">&nbsp;<h4 class="rank">第<%= i %>位</h4> </i>
+    <%= render partial: 'post_item', locals:{ post_item: post_item} %>
+  <% end %>
+  </div>
+  <br/>
+  <br/>
+  <h3 class="text-center"><strong>週間ランキング!!</strong></h3><br/>
+    <div class="d-flex justify-content-center">
+  <% @post_item_ranks.each.with_index(1) do |post_item, i| %>
+  <i class="fas fa-crown crown">&nbsp;<h4 class="rank">第<%= i %>位</h4> </i>
+    <%= render partial: 'post_item', locals:{ post_item: post_item} %>
+  <% end %>
+  </div>
+  <br/>
