--- a/app/views/public/post_items/show.html.erb
+++ b/app/views/public/post_items/show.html.erb
@@ -9,8 +9,6 @@
           <%= image_tag(image, width:250) %>
         <% end %>
       </div>
-      <!--ユーザーがログインしていてかつ、@userが現在のユーザーでなければ表示（つまりマイページには表示されない）-->
-    <%# if user_signed_in? && @post_item.user_id != current_user.id %>
     <!--お気に入りボタンの実装-->
       <div id="favorite_area_<%= @post_item.id %>">
         <%= render partial: "public/favorites/favorite", locals: { post_item: @post_item } %>
@@ -49,7 +47,7 @@
       <p>コメント件数：<%= @post_item.comments.count %></p>
       <% @post_item.comments.each do |comment| %>
         <p><% if @post_item.user.avatar.attached? %>
-             <%= image_tag current_user.avatar.variant(resize:'50x50').processed %>
+             <%= image_tag comment.user.avatar.variant(resize:'50x50').processed %>
            <% else %>
              <%= image_tag ("no_image.png"),size: '50x50' %>
            <% end %>
@@ -62,7 +60,7 @@
       <% end %>
     </div>
     <div>
-      <%= form_with(model:[@post_item, @comment], url: public_post_item_comments_path(@post_item, @comment), method: :post local: true) do |f| %>
+      <%= form_with(model:[@post_item, @comment], url: public_post_item_comments_path(@post_item, @comment), method: :post, local: true) do |f| %>
         <%= f.text_area :content, rows:'7',placeholder: "（例）コメントを記載してください（300文字まで）" %>
         <%= f.submit "送信する" %>
       <% end %>
