--- a/app/views/public/post_items/index.html.erb
+++ b/app/views/public/post_items/index.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 </main>
-
+<body>
 <div>
 <section class="py-5 text-center container pt-6">
   <h3 class="genre_title text-center"><strong>ジャンル検索一覧</strong></h3>
@@ -65,4 +65,5 @@
 <% end %>
 <h5><strong><%= paginate @post_items, class: "mx-auto" %></strong></h5>
 </div>
+</body>
 </html>
