--- a/app/assets/stylesheets/public/post_items.scss
+++ b/app/assets/stylesheets/public/post_items.scss
@@ -34,9 +34,17 @@
   height: 400px;
 }
 .card-img{
+  width: auto;
+  height: auto;
   width: 100%;
-  height: 400px;
+  height: 500px;
   object-fit: cover;
+}
+.card-img1{
+  width: auto;
+  height: auto;
+  width: 100%;
+  height: 500px;
 }
 .card-image{
   width: 100%;
@@ -142,5 +150,37 @@ html , body{
 .rank{
  color: #000000;
  font-family: 'Bangers', cursive;
+}
 
+h2 {
+  position: relative;
+  overflow: hidden;
+  padding: 1.5rem 2rem 1.5rem 130px;
+  border: 2px solid #000;
+  color:#228B22;
+}
+
+h2:before {
+  position: absolute;
+  top: -150%;
+  left: -100px;
+  width: 200px;
+  height: 300%;
+  content: '';
+  -webkit-transform: rotate(25deg);
+  transform: rotate(25deg);
+  background: #000;
+}
+
+h2 span {
+  font-size: 40px;
+  font-size: 4rem;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  display: block;
+  padding-top: 3px;
+  padding-left: 16px;
+  color: #fff;
 }
