--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -69,7 +69,8 @@
     <!--使い方の説明 -->
     <div class="row featurette pt-5 ml-3 mr-3">
       <div class="col-md-7">
-        <h2 class="featurette-heading">投稿作品へコメントをしよう!<span class="text-muted"><h3>コメント一つで繋がりが広がる。</h3></span></h2>
+        <h2 class="featurette-heading"><span>01</span>投稿作品へコメントをしよう!</h2>
+        <h3>コメント一つで繋がりが広がる。</h3>
         <p class="lead">いい作品に巡り合えたらまずは積極的に投稿へコメントしましょう！<br/>ランキングページには人気投稿作品が順番で並んでます。気になった作品は積極的に話を聞いてみましょう。作品の思い・工夫を知ることでインスピレーションが沸き上がります。</p>
       </div>
       <div class="col-md-5">
@@ -83,7 +84,8 @@
       <%= image_tag ("follow.png"),size: '500x500'  %>
       </div>
       <div class="col-md-7">
-        <h2 class="featurette-heading">フォローをしよう!<span class="text-muted"><h3>気になるクリエーターを見つけよう。</h3></span></h2>
+        <h2 class="featurette-heading"><span>02</span>お互いをフォローしよう!</h2>
+        <h3>気になるクリエーターを見つけよう。</h3>
         <p class="lead">いい作品に巡り合えたら、クリエーターの作品をチェックしよう。<br/>クリエーターのプロフィールページには本人の稿作品が順番で並んでます。クリエーターの作品を知り、自分のハンドメイド作品に組み込みましょう!</p>
       </div>
     </div>
@@ -92,7 +94,8 @@
 
     <div class="row featurette pt-5 ml-3 mr-3">
       <div class="col-md-7">
-        <h2 class="featurette-heading">相互フォローでチャット機能を使おう!<span class="text-muted"><h3>チャット機能で共同制作など、よりハンドメイドの可能性が広がる!。</h3></span></h2>
+        <h2 class="featurette-heading"><span>03</span>相互フォローでチャット機能を使おう!</h2>
+        <h3>チャット機能で共同制作など、よりハンドメイドの可能性が広がる!</h3>
         <p class="lead">お互いがフォローしあうことで、より仲を深められる！<br/>ジャンル検索機能で自分の気になるジャンルが見つかります。積極的にフォローしあうことでビジネスパートナーの発掘やより詳細な話し合いも可能です。</p>
       </div>
       <div class="col-md-5">
