--- a/app/views/public/post_items/edit.html.erb
+++ b/app/views/public/post_items/edit.html.erb
@@ -3,13 +3,26 @@
     <div class="row justify-content-md-center">
       <h2>投稿編集</h2>
     </div><br />
-  <%= form_with model: @post_item, url: public_post_item_path, method: :patch, local:true do |f| %>
-    <div class="row justify-content-md-center">
-      <div class="form-group col-md-3">
-       <%= f.label :images, '画像を投稿する' %>
-       <%= f.file_field :images, multiple: true %>
-      </div>
+  <%= form_with model: @post_item, url: public_post_item_path(@post_item), method: :patch, local:true do |f| %>
+  <div class="row justify-content-md-center">
+    <div class="form-group col-md">
+    <% if @post_item.images.present? %>
+    <p>削除したい画像にはチェックしてください</p>
+      <% @post_item.images.each do |image| %>
+      <%= f.check_box :image_ids, {:multiple => true}, image.id, false %>
+      <%= image_tag image, size:"250x250"%> <br>
+      <% end %>
+      <br/>
+      <h3>画像を追加する場合は登録してください</h3>
+      <%= f.file_field :images, multiple: true %>
+    <% end %>
     </div>
+  </div>
+    <!--  <div class="form-group col-md-3">-->
+    <!--   <%#= f.label :images, '画像を投稿する' %>-->
+    <!--   <%#= f.file_field :images, multiple: true %>-->
+    <!--  </div>-->
+    <!--</div>-->
     <div class="row justify-content-md-center">
       <div class="form-group">
        <%= f.label :name, '投稿作品名' %><br />
