--- a/app/views/public/post_items/index.html.erb
+++ b/app/views/public/post_items/index.html.erb
@@ -63,7 +63,7 @@
      <% end %>
    </div>
 <% end %>
-<h5><strong><%= paginate @post_items, class: "mx-auto" %></strong></h5>
+<!--<h5><strong><%#= paginate @post_items, class: "mx-auto" %></strong></h5>-->
 </div>
 </body>
 </html>
