--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,91 @@
   width: 30px;
   height: 30px;
 }
+.slider {
+  max-width: 500px;
+  max-height: 500px;
+  margin: 0 auto;
+  height: 100%;
+}
+.slider1 {
+  max-width: 800px;
+  max-height: 500px;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.slide {
+  font-weight: bold;
+  text-align: center;
+  line-height: 500px;
+}
+
+.slick-prev, .slick-next {
+    font-size: 0;
+    line-height: 0;
+    position: absolute;
+    top: 50%;
+    display: block;
+    width: auto;
+    height: 50px;
+    padding: 0;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    cursor: pointer;
+    color: transparent;
+    border: none;
+    outline: none;
+    background: transparent;
+}
+
+.slick-prev {
+    left: 0;
+    z-index: 1;
+}
+
+.slick-next {
+    right: 0px;
+}
+
+.slick-prev:before, .slick-next:before {
+    font-family: 'slick';
+    font-size: 20px;
+    line-height: 1;
+    opacity: .75;
+    color: white;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-prev:before {
+    content: '←';
+    font-size: 100px;
+}
+
+.slick-next:before {
+    content: '→';
+    font-size: 100px;
+}
+.slider img {
+    width: auto;
+    height: auto;
+    max-width: 500px;
+    max-height: 500px;
+    object-fit: cover;
+}
+.card-body1{
+    height: 300px;
+    text-shadow: 0 5px 5px black;
+    background-image: image-url('post_items_background.PNG');
+    background-position: center center;
+    background-size: cover;
+}
+.card-body2{
+  text-shadow: 0 2px 2px white;
+  background-image: image-url('post_items_background.PNG');
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+}
