--- a/app/assets/stylesheets/public/post_items.scss
+++ b/app/assets/stylesheets/public/post_items.scss
@@ -33,6 +33,12 @@
   width: 250px;
   height: 400px;
 }
+.card2{
+  width: 100%;
+  height: 100%;
+  width: 500px;
+  height: 600px;
+}
 .card-img{
   width: auto;
   height: auto;
@@ -55,13 +61,15 @@
 }
 .card-body{
   text-shadow: 0 5px 5px black;
-  background-image: image-url('post_items_background.PNG');
+  background-image: image-url('post_items_background.PNG2');
+  background-position: center center;
   width: 100%;
   height: 100%;
   background-size: cover;
 }
+
 .card-text{
-  font-family: 'IM Fell DW Pica SC', serif;
+  font-family: 'IM Fell DW  Pica SC', serif;
 }
 .itemname{
   white-space: nowrap;
@@ -183,4 +191,15 @@ h2 span {
   padding-top: 3px;
   padding-left: 16px;
   color: #fff;
+}
+
+.delete_images{
+  text-shadow: 0 2px 2px black;
+  color:#BBBBBB;
+}
+
+.show-img{
+  width: 800px;
+  height: 500px;
+  object-fit: cover;
 }
