--- a/app/assets/stylesheets/user/users.scss
+++ b/app/assets/stylesheets/user/users.scss
@@ -6,7 +6,9 @@
 @import 'font-awesome';
 
 .nickname {
-   color: green;
+   color: white;
+   text-shadow:0 5px 5px black;
+
 }
 
 .profile {
@@ -45,4 +47,19 @@
   color: #000;
   background: #BAD3FF;
   border-bottom: 2px solid #ccc100;
+}
+.avatar-background{
+background-image: image-url('profile_background.jpg');
+object-fit: cover;
+background-position: center center;
+width: 100%;
+float: right;
+padding-left: 20px;
+}
+.card-body1{
+  text-shadow: 0 5px 5px black;
+  background-image: image-url('post_items_background.PNG');
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 }
