--- a/app/views/public/post_items/edit.html.erb
+++ b/app/views/public/post_items/edit.html.erb
@@ -1,22 +1,29 @@
-<p id="notice"></p>
+<p id="notice"><%= notice %></p>
   <div class="container px-5 px-sm-0">
     <div class="row justify-content-md-center">
       <h2>投稿編集</h2>
     </div><br />
   <%= form_with model: @post_item, url: public_post_item_path(@post_item), method: :patch, local:true do |f| %>
-  <div class="row justify-content-md-center">
-    <div class="form-group col-md">
+  <%= render 'layouts/error_messages', model: f.object %>
+  <div class="container">
     <% if @post_item.images.present? %>
-    <p>削除したい画像にはチェックしてください</p>
+    <div class="delete_images text-center">
+      <h4><strong>✅削除したいものにはチェックを入れよう</strong></h4>
+    </div><br/>
+    <div class="row">
+      <div class="mx-auto d-flex justify-content-md-center flex-wrap">
       <% @post_item.images.each do |image| %>
       <%= f.check_box :image_ids, {:multiple => true}, image.id, false %>
       <%= image_tag image, size:"250x250"%> <br>
       <% end %>
+      </div>
       <br/>
+    </div>
+    <div class=" text-center">
       <h3>画像を追加する場合は登録してください</h3>
       <%= f.file_field :images, multiple: true %>
-    <% end %>
     </div>
+    <% end %>
   </div>
     <!--  <div class="form-group col-md-3">-->
     <!--   <%#= f.label :images, '画像を投稿する' %>-->
@@ -32,7 +39,7 @@
     <div class="row justify-content-md-center">
       <div class="form-group">
        <%= f.label :text, '投稿作品説明文'%><br />
-       <%= f.text_area :text, rows:'10',cols:'100',placeholder: "(例)今回初めての投稿です。このアクセサリーは・・・" %><br />
+       <%= f.text_area :text, rows:'10',cols:'100',placeholder: "最大文字数1000文字まででご入力ください" %><br />
       </div>
     </div>
     <div class="row justify-content-md-center">
