--- a/app/views/public/post_items/new.html.erb
+++ b/app/views/public/post_items/new.html.erb
@@ -15,26 +15,29 @@
   <%= form_with model: @post_item, url: public_post_items_path, method: :post, local:true do |f| %>
   <%= f.hidden_field :post_item_id, value: @post_item.id %>
     <div class="row justify-content-md-center">
-      <div class="form-group col-md-3">
-       <%= f.label :images, '画像を投稿する' %>
+      <div class="form-group text-center col-md-3">
+    <strong><%= f.label :images, '【画像を投稿する】' %></strong>
        <%= f.file_field :images, multiple: true %>
+
       </div>
     </div>
     <div class="row justify-content-md-center">
-      <div class="form-group">
-       <%= f.label :name, '投稿作品名' %><br />
+      <div class="form-group text-center">
+       <strong><%= f.label :name, '【投稿作品名】' %></strong><br />
        <%= f.text_field :name %>
       </div>
     </div>
-    <div class="row justify-content-md-center">
+    <div class="row justify-content-md-center text-center">
       <div class="form-group">
-       <%= f.label :text, '投稿作品説明文'%><br />
-       <%= f.text_area :text, rows:'10',cols:'100',placeholder: "(例)今回初めての投稿です。このアクセサリーは・・・" %><br />
+       <strong><%= f.label :text, '【投稿作品説明文】'%></strong><br />
+       <%= f.text_area :text, rows:'10',cols:'100',placeholder: "最大文字数1000文字まででご入力ください" %><br />
       </div>
     </div>
     <div class="row justify-content-md-center">
-      <div class="form-group">
-        <%= f.label :genre, 'ジャンル' %>
+      <div class="form-group text-center">
+        <div class="row justify-content-md-center">
+          <strong><%= f.label :genre, 'ジャンル選択欄' %></strong>
+        </div>
         <%= f.collection_check_boxes(:genre_ids, Genre.all, :id, :name) do |genre| %>
           <%= genre.label do %>
             <%= genre.check_box %>
