--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,4 +1,14 @@
-<p id="notice"></p>
+<!--<%# if model.errors.any?  %>-->
+<!--  <div class="alert">-->
+<!--    <ul>-->
+<!--      <%# model.errors.full_messages.each do |message|  %>-->
+<!--        <li>-->
+<!--          <%#= message %>-->
+<!--        </li>-->
+<!--      <%# end %>-->
+<!--    </ul>-->
+<!--  </div>-->
+<%# end %>
   <div class="container px-5 px-sm-0">
     <div class="row justify-content-md-center">
        <h2>プロフィール登録画面</h2>
