--- a/app/assets/stylesheets/public/genres.scss
+++ b/app/assets/stylesheets/public/genres.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the public/genres controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap";
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
+.genre-img{
+  width: 100%;
+  height: 100%;
+  weight: 300px;
+  height: 300px;
+  object-fit: cover;
+}
