--- a/app/assets/stylesheets/public/post_items.scss
+++ b/app/assets/stylesheets/public/post_items.scss
@@ -26,6 +26,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  background-color: #dcdcdc;
 }
 .card1{
   width: 100%;
@@ -51,6 +52,15 @@
   height: auto;
   width: 100%;
   height: 500px;
+  background-position: center center;
+  background-size: cover;
+}
+.card-img2{
+  width: auto;
+  height: auto;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
 }
 .card-image{
   width: 100%;
@@ -58,22 +68,22 @@
   weight: 200px;
   height: 200px;
   object-fit: cover;
+
 }
 .card-body{
-  text-shadow: 0 5px 5px black;
+  text-shadow: 0 2px 2px white;
   background-image: image-url('post_items_background.PNG2');
   background-position: center center;
   width: 100%;
   height: 100%;
   background-size: cover;
 }
-
 .card-text{
   font-family: 'IM Fell DW  Pica SC', serif;
 }
 .itemname{
   white-space: nowrap;
-  color: white;
+  color: black;
 }
 .box1 {
     position: relative;
@@ -166,6 +176,7 @@ h2 {
   padding: 1.5rem 2rem 1.5rem 130px;
   border: 2px solid #000;
   color:#228B22;
+  padding-bottom: 40px;
 }
 
 h2:before {
@@ -199,7 +210,10 @@ h2 span {
 }
 
 .show-img{
-  width: 800px;
-  height: 500px;
-  object-fit: cover;
+    max-width: auto;
+    max-height: 500px;
+    // object-fit: cover;
 }
+.comment{
+  word-break: normal;
+} 
