--- a/app/views/admin/genres/new.html.erb
+++ b/app/views/admin/genres/new.html.erb
@@ -1,9 +1,9 @@
-<p id="notice"></p>
   <div class="container px-5 px-sm-0">
     <div class="row justify-content-md-center">
        <h2>ジャンル新規登録画面</h2>
     </div><br />
   <%= form_with model: @genre, url: admin_genres_path(@genre), local: true do |f| %>
+  <%= render 'admin/error_form', locals: { genre: @genre } %>
     <div class="row justify-content-md-center">
       <div class="form-group col-md-3">
         <h4><%= f.label :name, "ジャンル名" %></h4>
