--- a/app/views/public/post_items/new.html.erb
+++ b/app/views/public/post_items/new.html.erb
@@ -38,10 +38,10 @@
         <div class="row justify-content-md-center">
           <strong><%= f.label :genre, 'ジャンル選択欄' %></strong>
         </div>
-        <%= f.collection_check_boxes(:genre_ids, Genre.all, :id, :name) do |genre| %>
+        <%= f.collection_radio_buttons :genre_ids, Genre.all, :id, :name do |genre| %>
           <%= genre.label do %>
-            <%= genre.check_box %>
-            <%= genre.text %>
+          <%= genre.label { genre.radio_button }%>
+          <%= genre.text %>
           <% end %>
         <% end %>
       </div>
