--- a/app/views/public/post_items/ranking.html.erb
+++ b/app/views/public/post_items/ranking.html.erb
@@ -9,10 +9,14 @@
   </div>
 </div>
   <div class="d-flex justify-content-center mx-md-auto">
+<% if @weekly_ranks.present? %>
   <% @favorite_ranks.each.with_index(1) do |post_item, i| %>
   <i class="fas fa-crown crown">&nbsp;<h4 class="rank">第<%= i %>位</h4> </i>
     <%= render partial: 'post_item', locals:{ post_item: post_item} %>
   <% end %>
+<% else %>
+   <h1>Sorry, no posts yet.</h1>
+<% end %>
   </div>
   <br/>
   <br/>
@@ -28,7 +32,7 @@
     <%= render partial: 'post_item', locals:{ post_item: post_item} %>
   <% end %>
 <% else %>
-   <h1>Sorry, no posts yet today.</h1>
+   <h1>Sorry, no posts yet week.</h1>
 <% end %>
 </div>
 <br/>
