--- a/app/views/public/users/followers.html.erb
+++ b/app/views/public/users/followers.html.erb
@@ -2,17 +2,19 @@
 <table class="ml-5">
  <% @followers.each do |user| %>
   <tr>
-    <td>
+    <td class="col-md mx-auto text-center" >
       <%= link_to  public_user_path(user) do %>
         <% if user.avatar.attached? %>
-          <%= image_tag user.avatar.variant(resize:'50x50').processed %>
+          <%= image_tag user.avatar.variant(resize:'100x100').processed %>
         <% else %>
-          <%= image_tag ("no_image.png"), size: '50x50'  %>
+          <%= image_tag ("no_image.png"), size: '100x100'  %>
         <% end %>
       <% end %>
+      <div class="col-md text-center">
+      <strong><%=user.nickname %></strong>
+      </div>
     </td>
-    <td><%=user.nickname %></td>
-    <td><%=user.profile %></td>
+    <!--<td><%#=user.profile %></td>-->
   </tr>
  <% end %>
 </table>
