[ADD]deviseのパスワードリセット機能（メールへ送信）実装完了

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container px-5 pt-2 px-sm-0">
+<div class="container px-5 px-sm-0">
 <div class= "text-center">
   <h1>Handmaderへようこそ～</h2>
   <h2>～Welcome to Handmader～</h2>
