[Edit]投稿作品一覧画面でのページネーション修正

--- a/app/views/public/post_items/index.html.erb
+++ b/app/views/public/post_items/index.html.erb
@@ -62,8 +62,8 @@
     </div>
      <% end %>
    </div>
+   <h5><%= paginate @post_items, class: "mx-auto" %></h5>
 <% end %>
-<!--<h5><strong><%#= paginate @post_items, class: "mx-auto" %></strong></h5>-->
 </div>
 </body>
 </html>
