--- a/app/views/public/post_items/show.html.erb
+++ b/app/views/public/post_items/show.html.erb
@@ -60,7 +60,7 @@
            <% end %>
         </p>
          <%= comment.user.nickname %></p>
-         <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.content %>
+         <%= comment.created_at.strftime('%Y/%m/%d') %><p><%= comment.content %></p>
          <% if comment.user == current_user %>
            <%= link_to "削除", public_post_item_comment_path(comment.post_item, comment), method: :delete %>
          <% end %>
