--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -13,6 +13,15 @@
     <div class="row justify-content-md-center">
        <h2>プロフィール登録画面</h2>
     </div><br />
+    <% if @user.errors.any? %>
+  <div id="error_explanation" class="alert alert-danger">
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
   <%= form_with model: @user, url: public_user_path ,method: :patch, local:true do |f| %>
     <div class="row justify-content-md-center">
       <div class="form-group col-md-3">
