[Edit]投稿辞ジャンルが重複するエラーを修正

--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -9,7 +9,7 @@
      <div class="card">
      <div class="card-body">
        <p class="card-image"><%= image_tag genre.image, class: "genre-img" %></p>
-       <h5 class="card-title text-white"><strong><%=genre.name %></strong></h5>
+       <h5 class="card-title"><strong><%=genre.name %></strong></h5>
        <p class="card-btn"><%=link_to"編集ページへ", edit_admin_genre_path(genre), class:"btn btn-lg btn btn-primary" %>
      </div>
      
