--- a/app/views/public/favorites/show.html.erb
+++ b/app/views/public/favorites/show.html.erb
@@ -1,9 +1,9 @@
-<h3 class="Title">お気に入り一覧</h3><br />
+<h3 class="title text-center">お気に入り一覧</h3><br />
  <div class="container px-5 px-sm-0">
   <div class="row justify-content-md-center">
      <% @favorite_list_page.each do |post_item| %>
-       <div class="Box mr-5">
-        <div class ="col offset-1">
+       <div class="Box mr-5 my-3">
+        <div class ="col">
           <%= link_to  public_user_path(post_item.user) do %>
             <% if post_item.user.avatar.attached? %>
               <%= image_tag post_item.user.avatar.variant(resize:'100x100').processed %>
@@ -21,6 +21,11 @@
         </div>
        </div>
      <% end %>
+   </div>
+   <div class="row">
+     <div class="col-md text-center my-5">
+      <%= link_to 'マイページへ戻る', public_user_path(current_user.id), class: 'btn btn--blue btn--cubic'%> 
+     </div>
    </div>
  </div>
 
