--- a/app/views/public/users/unsubscribe.html.erb
+++ b/app/views/public/users/unsubscribe.html.erb
@@ -6,7 +6,11 @@
     <h3>本当に退会されますか？</h3>
     <h3>退会された場合は、会員情報・投稿データ共に削除されます。</h3>
   </div>
-  <div>
-    <%= link_to '退会しない', public_user_path(@user),class:"btn btn-lg btn-success mt-4 col-md-3" %>
-    <%= link_to "退会する", public_withdraw_path(@user), method: :patch, data: {confirm: "本当に退会しますか？"},  class:"btn btn-lg btn-warning mt-4 col-md-3"%>
+  <div class="row">
+    <div class="col-md text-center">
+      <%= link_to '退会しない', public_user_path(@user),class:"btn btn-lg btn-success mt-4 col-md-6" %>
+    </div>
+    <div class="col-md text-center">
+      <%= link_to "退会する", public_withdraw_path(@user), method: :patch, data: {confirm: "本当に退会しますか？"},  class:"btn btn-lg btn-warning mt-4 col-md-6"%>
+    </div>
   </div>
