--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -73,15 +73,19 @@
         <h3><span>【<%= @user.nickname %>の投稿一覧】</span></h3><br />
       </div>
       <div class="row">
-        <% @post_items.each do |post_item| %>
-      <div class="col-md-6">
-          <%= link_to  public_post_item_path(post_item.id) do %>
-           <%= image_tag post_item.images[0] ,width:250, height:250 %>
-          <!--この中に、いいね件数・コメント件数の表示をするようにもしたい-->
+        <% if @post_items.present? %>
+          <% @post_items.each do |post_item| %>
+            <div class="col-md-6">
+              <%= link_to  public_post_item_path(post_item.id) do %>
+              <%#= image_tag post_item.images[0] ,width:250, height:250 %>
+            </div>
           <% end %>
-            <p>
+          <p>
+            <%= link_to  public_post_item_path(post_item.id) do %>
               作品名：<%= post_item.name %>
-            </p>
+            <% end %>
+          </p>
+        <% end %>
       <% if @favorite_list.present? %>
         <% @favorite_list.each do |post_item| %>
           <%= post_item.name %>
